# eIODP-2.0

./: .gitignore  CMakeLists.txt  build.bat  readme.md
demo/linux/: server_demo_linux.c
demo/qt/: demomain.cpp  demomain.h  demomain.ui  eiodp_qtdemo.pro  eiodp_qtdemo.pro.user.05cfc52
demo/qt/qt-server/: demoserver.cpp  demoserver.h  demoserver.ui  eiodp_qtServer.pro  main.cpp
demo/win/: client_demo.c  server_demo.c  test.c
include/: eiodp.h  iodp_serial_linux.h
platform/qt/: demomain.cpp  demomain.h  demomain.ui  eiodp_qtdemo.pro  main.cpp
platform/qt/Qiodp/: Qiodp.pri  qiodp.cpp  qiodp.h
platform/win/iodp_tcp/: CMakeLists.txt  iodp_tcp.c  iodp_tcp.h  server_demo.c
src/: eiodp.c  eiodp.h  main.c
src/platform/iodp_linux/: iodp_serial_linux.c  iodp_tcp_linux.c  iodp_tcp_linux.h
src/platform/iodp_qt/: Qiodp.pri  qiodp.cpp  qiodp.h
src/platform/iodp_win/: iodp_tcp_win.c  iodp_tcp_win.h
